# json-generator

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  index.md
jsons/: cities.txt  cmd  countries  curls  example_json.json  example_template.json  json.json  jsons.json  numbers_negate  simple_jsons.json  simple_template.json
jsons/t/: json_0.json  json_1.json  json_10.json  json_11.json  json_12.json  json_13.json  json_14.json  json_15.json  json_16.json  json_17.json  json_18.json  json_19.json  json_2.json  json_20.json  json_21.json  json_22.json  json_23.json  json_24.json  json_25.json  json_26.json  json_27.json  json_28.json  json_29.json  json_3.json  json_30.json  json_31.json  json_32.json  json_33.json  json_34.json  json_35.json  json_36.json  json_37.json  json_38.json  json_39.json  json_4.json  json_40.json  json_41.json  json_42.json  json_43.json  json_44.json  (+59 more)
jsons/temp/: example.json
mock-server/: Cargo.toml
mock-server/src/: main.rs
src/: error.rs  json_template.rs  lib.rs  macro.rs  main.rs  tools.rs
src/generator/: from_string.rs  generators.rs  mod.rs
src/parser/: generator.rs  generators.rs  json.rs  mod.rs  parser.rs  structure.rs
src/sender/: file.rs  http.rs  mod.rs
tests/: cli.rs
