[package]
name = "json-generator-rand"
description = "The simple console utility and library to generate JSON items"
version = "0.2.0"
authors = ["Boris Zhguchev <boris.zhguchev@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
homepage = "https://github.com/besok/json-generator"
repository = "https://github.com/besok/json-generator"
readme = "README.md"
keywords = ["json", "json-generator","json-template","generator" ]
categories = ["libraries","Command line utilities","Development tools"]

[dependencies]
nom = "6.0"
serde_json = "1.0"
rand = "0.7.3"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = "0.4"
once_cell = "1.3.1"
curl="0.4.29"
clap = "3.0.0-beta.1"
log = "0.4"
simplelog = "^0.7.6"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
